[package]
name = "fw"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="3.1.8", default-features = false, features=["env", "derive", "unicode", "suggestions", "std"] }
subprocess = "0.2.8"